mail/templates/default/app.css
/* ... */
et2-box.smime_cert_unknownemail {
	border-top: 4px solid #a28cff !important;
}

et2-image.smime_cert_verified {
	background: #1ab82c;
}
et2-box.smime_cert_notvalid {
	border-top: 4px solid #e90052 !important;
}
et2-image.smime_cert_notvalid {
	background: #e90052;
}
et2-image.smime_cert_unknownemail {
	background: #a28cff;
}
.mailPreviewHeaders.smimeIcons et2-image {
	width: 24px;
}
.mailPreviewHeaders.smimeIcons {
	display: flex;
	justify-content: end;
}

#mail-compose tr.mailComposeHeaders .et2_selectbox,
#mail-compose tr.mailComposeHeaders .et2_taglist .ms-ctn,
#mail-compose tr.mailComposeHeaders .et2_taglist .ms-sel-ctn input,
#mail-compose tr.mailComposeHeaders input {
  border: none;
  outline: none;
}
#mail-compose tr.mailComposeHeaders .et2_taglist .ms-ctn-focus {
  border: none;
  box-shadow: none;
}

.et2_vbox.et2_box_widget.mailComposeBodySection .mailComposeHtmlContainer .tox.tox-tinymce{
    width: 100%;
}

#mail-compose_subject {
	padding: 10px 0 10px 0;
}
div#mail-index_nm.splitter-pane {min-height: 100px;}
#mail-index_mailSplitter .splitter-bar-horizontal {background: white;}

#calendar-meeting table.et2_grid.meetingRequest td {
	padding-left: 8px !important;
}
#mail-index_mailPreviewContainer {
	height: calc(100% - 13em);
	border-top: 1px solid silver;
	margin-bottom: 0;
}

#mail-index_nm .mail.row et2-url-email_ro {width: fit-content}
#mail-index_nm  .et2_label.et2_vfs {text-align: center}
.et2_nextmatch .egwGridView_outer .egwGridView_scrollarea tbody tr[class*="label"].row_category td:first-child>div,
.et2_nextmatch .egwGridView_outer .egwGridView_scrollarea tbody tr.flagged.row_category td:first-child>div{
	margin-left: -1px;
}
.et2_nextmatch .egwGridView_outer .egwGridView_scrollarea tbody tr.row_category td:first-child>div {
	margin-left: 0px;
}
#mail-index_nm tbody tr et2-lavatar {max-width: 3.7em; min-width:3.7em !important;}

.previewWrapper .firstColumnTitle {
	max-width: 7em;
	text-align: end;
	min-width: 7em;
	color: darkgrey;
}
.mailPreviewHeaders et2-select-email::part(control) {
	border: none;
}
#popupMainDiv {height: 100%}
.treeContainer {height: calc(100% - 100px)}
#mail-index_mail-index-header_right {gap: 1ex;}
#mail-index_mail-index-header_right et2-details.vacationnotice {
	min-width: 8em;
}
#mail-index_mail-index-header_right et2-details.vacationnotice::part(base) {
	background: #dee9f3;
	border-color: #0f65968f;
	border-width: 1px;
	height: 2.6em;
}

et2-hbox.mailPreviewHeaders {
	margin-bottom: 0px;
}

et2-description#mail-index_mailPreview_subject {
	margin-bottom: 0;
	margin-top: 0.3em;
}

/* Make +N tag in email look like text, not tag */
et2-select-email::part(tags) {
	width: 100%;
}

et2-select-email::part(tag) {
	flex: 10 0 auto;
}

et2-select-email::part(tag__base) {
	font-weight: bold;
	border: none;
	background: inherit;
}

et2-select-email::part(tag__content) {
	margin-left: auto;
}
et2-vbox.addresses::part(base) {
	gap: 0px;
}
.mailPreviewHeaders et2-lavatar {
	margin-top: 3px;
	position: absolute;
}
et2-searchbox#mail-index_nm_search {
	width: 100%;
	min-width: 5em;
}
.nextmatch_header_row>.filtersContainer>et2-select, .nextmatch_header_row>.filtersContainer>et2-select-cat {
	width: 80px;
}
et2-split#mail-index_mailSplitter.limitted .header_count {
	display: none;
}
et2-split#mail-index_mailSplitter.squeezed .mail-index_quotabox{
	display: none;
}

